# pyproximal

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  azure-pipelines.yml  environment-dev-arm.yml  environment-dev.yml  environment.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-doc.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  build_uv.yaml  codacy-coverage-reporter.yaml  deploy.yaml  draft-pdf.yaml  flake8.yaml  mypy.yaml  ruff.yaml
docs/: Makefile
docs/source/: adding.rst  changelog.rst  conf.py  contributing.rst  credits.rst  index.rst  installation.rst
docs/source/api/: index.rst
examples/: README.txt  dykstra.py  plot_concave_penalties.py  plot_dykstra.py  plot_indicators.py  plot_norms.py  plot_quadratic.py  pyprox_deconv_pgm_compare.ipynb  test_deconv_sv_psf.py
joss/: paper.bib  paper.md
pyproximal/: ProxOperator.py  __init__.py
pyproximal/optimization/: __init__.py  basesolver.py  bregman.py  cls_primal.py  palm.py  pnp.py  primal.py  primaldual.py  segmentation.py  sr3.py
pyproximal/projection/: AffineSet.py  Box.py  DykstrasProjection.py  Euclidean.py  GenericIntersection.py  HalfSpace.py  Hankel.py  Intersection.py  L0.py  L1.py  Nuclear.py  Simplex.py  __init__.py
pyproximal/proximal/: AffineSet.py  Box.py  DykstraLikeProximal.py  DykstrasProjectionProx.py  ETP.py  Euclidean.py  Geman.py  GenericIntersection.py  HalfSpace.py  Hankel.py  Huber.py  Intersection.py  L0.py  L1.py  L2.py  L21.py  L21_plus_L1.py  Log.py  Nonlinear.py  Nuclear.py  Orthogonal.py  Quadratic.py  QuadraticEnvelope.py  RelaxedMS.py  SCAD.py  Simplex.py  SingularValuePenalty.py  Sum.py  TV.py  VStack.py  _Dykstra.py  _Simplex_cuda.py  _Simplex_numba.py  __init__.py  _dykstra_core.py  rMS.py
pyproximal/utils/: __init__.py  backend.py  bilinear.py  gradtest.py  moreau.py  typing.py  utils.py
pytests/: test_basic.py  test_bilinear.py  test_concave_penalties.py  test_dykstra.py  test_grads.py  test_norms.py  test_projection.py  test_proximal.py  test_solver.py
testdata/: brainphantom.mat  marmousi_trace.npy  mocap.npz  spiralsampling.mat
tutorials/: README.txt  adaptivepd.py  basispursuit.py  brainmri.py  constrained.py  deblending.py  denoising.py  groupsparsity.py  hankel_matrix_estimation.py  lowrankcompletion.py  matrixfactorization.py  nonlinearconstrained.py  nrsfm.py  plugandplay.py  relaxed_mumford-shah.py  segmentation.py  totalvariation.ipynb  twist.py
