[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyproximal"
description = "Python library implementing proximal operators to solve non-smooth, constrained convex problems with proximal algorithms"
readme = "README.md"
authors = [
    {name = "Matteo Ravasi", email = "matteoravasi@gmail.com"},
]
license = {file = "LICENSE.md"}
keywords = ["algebra", "inverse problems", "proximal", "convex optimization", "large-scale optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.21.0",
    "scipy >= 1.11.0",
    "pylops >= 2.0.0",
    "typing_extensions",
]
dynamic = ["version"]

[project.optional-dependencies]
advanced = [
    "llvmlite",
    "numba",
]

[dependency-groups]
dev = [
    "pytest",
    "isort",
    "flake8",
    "pre-commit",
    "autopep8",
    "black",
    "mypy",
]
doc = [
    "matplotlib",
    "scikit-image",
    "bm3d<4.2.4",
    "bm4d<4.2.4",
    "pooch",
    "sphinx",
    "sphinx-design",
    "sphinx-gallery",
    "sphinx-iconify",
    "shibuya",
    "sphinxemoji",
    "numpydoc",
    "nbsphinx",
    "image",
]

[tool.setuptools.packages.find]
exclude = ["pytests"]

[tool.setuptools_scm]
version_file = "pyproximal/version.py"

[tool.mypy]
files = ["pyproximal", ]
python_version = "3.10"
mypy_path = "pyproximal"
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
allow_redefinition = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["cupy.*", "numpy.*", "numba.*", "pylops.*", "scipy.*", "scooby.*", "pyproximal.*"]
ignore_missing_imports = true
