[metadata]
name = pyproximal
fullname = PyProximal
description = Python library implementing proximal operators to solve non-smooth, constrained convex problems with proximal algorithms
long_description = file: README.md
long_description_content_type = text/markdown
author = The PyLops Development Team
author_email = matteoravasi@gmail.com
maintainer = "Matteo Ravasi"
maintainer_email = matteoravasi@gmail.com
license = LGPL-3.0 License
license_file = LICENSE.md
platform = any
keywords = algebra, inverse problems, proximal, convex optimization, large-scale optimization
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3),
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering : Mathematics
url = https://github.com/pylops/pyproximal

project_urls =
    Documentation = https://pyproximal.readthedocs.io/
    Release Notes = https://github.com/pylops/pyproximal/releases
    Bug Tracker = https://github.com/pylops/pyproximal/issues
    Source Code = https://github.com/pylops/pyproximal

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.15.0
    scipy >= 1.8.0
    pylops >= 2.0.0

[options.extras_require]
advanced =
    llvmlite
    numba

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = pytests/*.py
